feat: wiring list transaction

--- a/app/src/main/res/layout/item_list_transaction.xml
+++ b/app/src/main/res/layout/item_list_transaction.xml
@@ -97,25 +97,25 @@
             android:layout_marginVertical="8dp" />
 
         <!-- Buttons -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_marginTop="8dp">-->
 
-            <Button
-                android:id="@+id/deleteButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Delete"
-                android:backgroundTint="@color/red" />
+<!--            <Button-->
+<!--                android:id="@+id/deleteButton"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Delete"-->
+<!--                android:backgroundTint="@color/red" />-->
 
-            <Button
-                android:id="@+id/editButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="Edit Transaksi" />
-        </LinearLayout>
+<!--            <Button-->
+<!--                android:id="@+id/editButton"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="8dp"-->
+<!--                android:text="Edit Transaksi" />-->
+<!--        </LinearLayout>-->
     </LinearLayout>
 </androidx.cardview.widget.CardView>
