Feat: Add product (onprogress) still error

--- a/app/src/main/res/layout/fragment_create_product.xml
+++ b/app/src/main/res/layout/fragment_create_product.xml
@@ -147,7 +147,7 @@ android:layout_height="match_parent">
                 app:hintEnabled="false">
                 <!-- Harga Satuan Layout -->
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/hargaSatuanEt"
+                    android:id="@+id/hargaEt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingVertical="15dp"
